--- a/BiziLand/index.html
+++ b/BiziLand/index.html
@@ -75,13 +75,13 @@
       <div class="col-lg-12" style="margin-bottom:5%">
         <div class="container d-none d-lg-block">
           <div class="row d-flex align-items-center justify-content-center">
-            <div class="col-lg-7 col-md-6">
-              <div id="welcome">
+            <div class="col-lg-7 col-md-6  d-flex align-items-center justify-content-center">
+              <div class="" id="welcome">
 
                 <div>
                   <h1 class="text-center" style="font-size:50px;font-weight:500;font-family:Love_Trust;">Technology For Good.</h1>
-                  <div class="text-center">
-                    <img  class="img-fluid" src="assets/img/arrow.png" alt="" width="45%">
+                  <div class="text-center arrowImage">
+                    <img  class="img-fluid" src="assets/img/arrow.png" alt="" width="80%">
                   </div>
                   <!-- <h1 class="pt-3"style="color:#009FE3">CodLogic<br>Software Engineering</h1>
                   <p class="pt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> -->
@@ -90,7 +90,7 @@
                   </div> -->
                 </div>
                 <!-- <div id="profile">
-                  <div class="row">
+                  <div class="row fadeIn">
                     <div class="col-6">
                       <img src="assets/img/DescriptionImage/software.png" class="img-fluid" alt=""> -->
                       <!-- <img src="assets/img/DescriptionImage/profile.png" class="img-fluid" alt=""> -->
@@ -677,12 +677,12 @@
         <div class="owl-carousel testimonials-carousel">
 
           <div class="testimonial-item">
-            <img src="assets/img/testimonials/man.jpg" class="testimonial-img" alt="">
-            <h3>Fiifi Goodman</h3>
-            <h4>Ceo &amp; Founder</h4>
+            <img src="assets/img/team/jim.png" class="testimonial-img" alt="">
+            <h3>Jim Garnish</h3>
+            <h4>Senior Business Strategist</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+              If in doubt, give it a clout.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
           </div>
@@ -1408,8 +1408,8 @@
           // Add ID and content
         // newNode.id = 'salutation';
         currentNode.innerHTML =
-          '<div class="row"> <div class="col-6"> <img src="assets/img/DescriptionImage/profile.png" class="img-fluid" alt=""></div>' +
-          '<div class="col-6" style="padding-top:5%;"><h1 style="font-size:40px">Secured Guest Data</h1><p style="margin-top:16px">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div></div>';
+          '<div class="row fadeIn"> <div class="col-6"> <img src="assets/img/DescriptionImage/profile.png" class="img-fluid" alt=""></div>' +
+          '<div class="col-6" style="padding-top:5%;"><h1 data-aos="fade-left" data-aos-delay="100" style="font-size:40px">Secured Guest Data</h1><p data-aos="fade-right" data-aos-delay="100"  style="margin-top:16px">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div></div>';
 
       break;
 
@@ -1418,8 +1418,8 @@
           // Add ID and content
         // newNode.id = 'salutation';
         currentNode.innerHTML =
-          '<div class="row"> <div class="col-6"> <img src="assets/img/DescriptionImage/software.png" class="img-fluid" alt=""></div>' +
-          '<div class="col-6" style="padding-top:5%;"><h1 style="font-size:40px">Secured Guest Data</h1><p style="margin-top:16px">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div></div>';
+          '<div class="row fadeIn"> <div class="col-6"> <img src="assets/img/DescriptionImage/software.png" class="img-fluid" alt=""></div>' +
+          '<div class="col-6" style="padding-top:5%;"><h1 data-aos="fade-left" data-aos-delay="100" style="font-size:40px">Secured Guest Data</h1><p p data-aos="fade-right" data-aos-delay="100" style="margin-top:16px">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div></div>';
 
       break;
 
@@ -1428,8 +1428,8 @@
       // Add ID and content
       // newNode.id = 'salutation';
       currentNode.innerHTML =
-      '<div class="row"> <div class="col-6"> <img src="assets/img/DescriptionImage/key.png" class="img-fluid" alt=""></div>' +
-      '<div class="col-6" style="padding-top:5%;"><h1 style="font-size:40px">Secured Guest Data</h1><p style="margin-top:16px">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div></div>';
+      '<div class="row fadeIn"> <div class="col-6"> <img src="assets/img/DescriptionImage/key.png" class="img-fluid" alt=""></div>' +
+      '<div class="col-6" style="padding-top:5%;"><h1 data-aos="fade-left" data-aos-delay="100" style="font-size:40px">Secured Guest Data</h1><p p data-aos="fade-right" data-aos-delay="100" style="margin-top:16px">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div></div>';
 
       break;
 
@@ -1438,16 +1438,16 @@
       // Add ID and content
       // newNode.id = 'salutation';
       currentNode.innerHTML =
-      '<div class="row"> <div class="col-6"> <img src="assets/img/DescriptionImage/shield.png" class="img-fluid" alt=""></div>' +
-      '<div class="col-6" style="padding-top:5%;"><h1 style="font-size:40px">Secured Guest Data</h1><p style="margin-top:16px">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div></div>';
+      '<div class="row fadeIn"> <div class="col-6"> <img src="assets/img/DescriptionImage/shield.png" class="img-fluid" alt=""></div>' +
+      '<div class="col-6" style="padding-top:5%;"><h1 data-aos="fade-left" data-aos-delay="100" style="font-size:40px">Secured Guest Data</h1><p p data-aos="fade-right" data-aos-delay="100" style="margin-top:16px">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div></div>';
 
       break;
 
       case "default":
 
       currentNode.innerHTML =
-      '<div><h1 class="text-center" style="font-size:50px;font-weight:500;font-family:Love_Trust;">Technology For Good.</h1>' +
-      '<div class="text-center"><img  class="img-fluid" src="assets/img/arrow.png" alt="" width="45%"></div>' +
+      '<div class="fadeIn"><h1 class="text-center" style="font-size:50px;font-weight:500;font-family:Love_Trust;">Technology For Good.</h1>' +
+      '<div class="text-center"><img  class="img-fluid" src="assets/img/arrow.png" alt="" width="80%"></div>' +
       '</div>';
     }
 
@@ -1457,7 +1457,7 @@
 // Add ID and content
 // newNode.id = 'salutation';
 // currentNode.innerHTML =
-//   '<div class="row"> <div class="col-6"> <img src="assets/img/DescriptionImage/profile.png" class="img-fluid" alt=""></div>' +
+//   '<div class="row fadeIn"> <div class="col-6"> <img src="assets/img/DescriptionImage/profile.png" class="img-fluid" alt=""></div>' +
 //   '<div class="col-6" style="padding-top:5%;"><h1 style="font-size:40px">Secured Guest Data</h1><p style="margin-top:16px">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div></div>';
 
   // Replace the current node with the new node 
