--- a/BiziLand/index.html
+++ b/BiziLand/index.html
@@ -119,28 +119,28 @@
                   <div class="item item5"onclick="profile(this.id);" id="default"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
                   <div class="item item6"onclick="profile(this.id);" id="default"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
                   <div class="item item7"onclick="profile(this.id);" id="default"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
-                  <div class="item item8 anim" onclick="profile(this.id);" id="user"><img src="assets/img/brandicons/profil.png" alt="Blank Icon" width="60" height="60"></div></a>
-                  <div class="item item9 anim" onclick="profile(this.id)" id="software"><img src="assets/img/brandicons/software.png" alt="Blank Icon" width="60" height="60"></div>
-                  <div class="item item10 anim" onclick="profile(this.id)" id="key"><img src="assets/img/brandicons/key.png" alt="Blank Icon" width="60" height="60"></div>
-                  <div class="item item11 anim" onclick="profile(this.id)" id="shield"><img src="assets/img/brandicons/shield.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item8 anim" onclick="profile(this.id);" id="user"><img src="assets/img/icons/profile.png" alt="Blank Icon" width="60" height="60"></div></a>
+                  <div class="item item9 anim" onclick="profile(this.id)" id="software"><img src="assets/img/icons/rfid.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item10 anim" onclick="profile(this.id)" id="key"><img src="assets/img/icons/accesscontrol.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item11 anim" onclick="profile(this.id)" id="shield"><img src="assets/img/icons/eventlog.png" alt="Blank Icon" width="60" height="60"></div>
                   <div class="item item12"onclick="profile(this.id);" id="default"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
                   <div class="item item13"onclick="profile(this.id);" id="default"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
-                  <div class="item item14 anim" onclick="profile(this.id)" id="configurable"><img src="assets/img/brandicons/Configurable.png" alt="Blank Icon" width="60" height="60"></div>
-                  <div class="item item15 anim" onclick="profile(this.id)" id="cctv"><img src="assets/img/brandicons/cctv.png" alt="Blank Icon" width="60" height="60"></div>
-                  <div class="item item16 anim" onclick="profile(this.id)" id="database"><img src="assets/img/brandicons/database.png" alt="Blank Icon" width="60" height="60"></div>
-                  <div class="item item17 anim" onclick="profile(this.id)" id="police"><img src="assets/img/brandicons/police.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item14 anim" onclick="profile(this.id)" id="configurable"><img src="assets/img/icons/support.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item15 anim" onclick="profile(this.id)" id="cctv"><img src="assets/img/icons/cctv.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item16 anim" onclick="profile(this.id)" id="database"><img src="assets/img/icons/database.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item17 anim" onclick="profile(this.id)" id="police"><img src="assets/img/icons/police.png" alt="Blank Icon" width="60" height="60"></div>
                   <div class="item item18"onclick="profile(this.id);" id="default"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
                   <div class="item item19"onclick="profile(this.id);" id="default"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
-                  <div class="item item20 anim" onclick="profile(this.id)" id="rfid"><img src="assets/img/brandicons/rfid.png" alt="Blank Icon" width="60" height="60"></div>
-                  <div class="item item21 anim" onclick="profile(this.id)" id="environmental"><img src="assets/img/brandicons/environmental.png" alt="Blank Icon" width="60" height="60"></div>
-                  <div class="item item22 anim" onclick="profile(this.id)" id="faceScan"><img src="assets/img/brandicons/faceScan.png" alt="Blank Icon" width="60" height="60"></div>
-                  <div class="item item23 anim" onclick="profile(this.id)" id="analysis"><img src="assets/img/brandicons/analysis.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item20 anim" onclick="profile(this.id)" id="rfid"><img src="assets/img/icons/rfid.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item21 anim" onclick="profile(this.id)" id="environmental"><img src="assets/img/icons/ecofriendly.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item22 anim" onclick="profile(this.id)" id="faceScan"><img src="assets/img/icons/facerec.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item23 anim" onclick="profile(this.id)" id="analysis"><img src="assets/img/icons/analytics.png" alt="Blank Icon" width="60" height="60"></div>
                   <div class="item item24"onclick="profile(this.id);" id="default"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
                   <div class="item item25"onclick="profile(this.id);" id="default"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
-                  <div class="item item26 anim" onclick="profile(this.id)" id="network"><img src="assets/img/brandicons/network.png" alt="Blank Icon" width="60" height="60"></div>
-                  <div class="item item27 anim" onclick="profile(this.id)" id="accuracy"><img src="assets/img/brandicons/accuracy.png" alt="Blank Icon" width="60" height="60"></div>
-                  <div class="item item28 anim" onclick="profile(this.id)" id="log"><img src="assets/img/brandicons/log.png" alt="Blank Icon" width="60" height="60"></div>
-                  <div class="item item29 anim" onclick="profile(this.id)" id="message"><img src="assets/img/brandicons/message.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item26 anim" onclick="profile(this.id)" id="network"><img src="assets/img/icons/connectivity.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item27 anim" onclick="profile(this.id)" id="accuracy"><img src="assets/img/icons/database.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item28 anim" onclick="profile(this.id)" id="log"><img src="assets/img/icons/activityLogging.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item29 anim" onclick="profile(this.id)" id="message"><img src="assets/img/icons/message.png" alt="Blank Icon" width="60" height="60"></div>
                   <div class="item item30"onclick="profile(this.id);" id="default"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
                   <div class="item item31"onclick="profile(this.id);" id="default"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
                   <div class="item item32"onclick="profile(this.id);" id="default"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
