technology for good column updated

--- a/BiziLand/index.html
+++ b/BiziLand/index.html
@@ -76,39 +76,22 @@
         <div class="container d-none d-lg-block">
           <div class="row d-flex align-items-center justify-content-center">
             <div class="col-lg-7 col-md-6  d-flex align-items-center justify-content-center">
-              <div class="" id="welcome">
-
-                <div>
-                  <h1 class="text-center" style="font-size:50px;font-weight:500;font-family:Love_Trust;">Technology For Good.</h1>
-                  <div class="text-center arrowImage">
-                    <img  class="img-fluid" src="assets/img/arrow.png" alt="" width="80%">
-                  </div>
-                  <!-- <h1 class="pt-3"style="color:#009FE3">CodLogic<br>Software Engineering</h1>
-                  <p class="pt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> -->
-                  <!-- <div class="d-flex pt-3">
-                    <a href="#about" class="btn-get-started scrollto">Get Started</a>
-                  </div> -->
-                </div>
-                <!-- <div id="profile">
-                  <div class="row fadeIn">
-                    <div class="col-6">
-                      <img src="assets/img/DescriptionImage/software.png" class="img-fluid" alt=""> -->
-                      <!-- <img src="assets/img/DescriptionImage/profile.png" class="img-fluid" alt=""> -->
-                    <!-- </div>
-                    <div class="col-6" style="padding-top:5%;">
-                      <h1 style="font-size:40px">
-                        Secured Guest Data
-                      </h1>
-                      <p style="margin-top:16px">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                      </p>
-                    </div>
-                  </div>
-                </div> -->
-                
-              </div>
               
+              <div class="row" id="welcome">
+                <div class="col-9 d-flex align-items-center justify-content-center">
+                    <h1 class="text-center" style="font-size:45px;font-weight:500;font-family:Love_Trust; color: #7c7c7c;">Technology for good.</h1>
+                </div>
+                <div class="col-2 d-flex align-items-center justify-content-center mt-5 offset-1">
+                  <div><img class="img-fluid" src="assets/img/newArrow.png" alt=""></div>
+                </div>
+                <div class="col-12 offset-1">
+                  <p style="text-align: right; color: #7c7c7c;">Click on an icon to <span style="word-wrap: break-word;">learn more</span></p>
+                </div>
+
+              </div>
+
             </div>
+
             <div class="col-lg-5  col-md-6 mt-4 mt-md-0">
               <!-- <img src="assets/img/brandicons.png" class="img-fluid" alt=""> -->
                 <div class="contain">
@@ -119,28 +102,28 @@
                   <div class="item item5"onclick="profile(this.id);" id="default"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
                   <div class="item item6"onclick="profile(this.id);" id="default"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
                   <div class="item item7"onclick="profile(this.id);" id="default"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
-                  <div class="item item8 anim" onclick="profile(this.id);" id="user"><img src="assets/img/icons/profile.png" alt="Blank Icon" width="60" height="60"></div></a>
-                  <div class="item item9 anim" onclick="profile(this.id)" id="software"><img src="assets/img/icons/rfid.png" alt="Blank Icon" width="60" height="60"></div>
-                  <div class="item item10 anim" onclick="profile(this.id)" id="key"><img src="assets/img/icons/accesscontrol.png" alt="Blank Icon" width="60" height="60"></div>
-                  <div class="item item11 anim" onclick="profile(this.id)" id="shield"><img src="assets/img/icons/eventlog.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item8 anim" onclick="profile(this.id);" id="user"><img src="assets/img/brand_icons/profile.png" alt="Blank Icon" width="60" height="60"></div></a>
+                  <div class="item item9 anim" onclick="profile(this.id)" id="software"><img src="assets/img/brand_icons/rfid.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item10 anim" onclick="profile(this.id)" id="key"><img src="assets/img/brand_icons/accesscontrol.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item11 anim" onclick="profile(this.id)" id="shield"><img src="assets/img/brand_icons/research.png" alt="Blank Icon" width="60" height="60"></div>
                   <div class="item item12"onclick="profile(this.id);" id="default"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
                   <div class="item item13"onclick="profile(this.id);" id="default"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
-                  <div class="item item14 anim" onclick="profile(this.id)" id="configurable"><img src="assets/img/icons/support.png" alt="Blank Icon" width="60" height="60"></div>
-                  <div class="item item15 anim" onclick="profile(this.id)" id="cctv"><img src="assets/img/icons/cctv.png" alt="Blank Icon" width="60" height="60"></div>
-                  <div class="item item16 anim" onclick="profile(this.id)" id="database"><img src="assets/img/icons/database.png" alt="Blank Icon" width="60" height="60"></div>
-                  <div class="item item17 anim" onclick="profile(this.id)" id="police"><img src="assets/img/icons/police.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item14 anim" onclick="profile(this.id)" id="configurable"><img src="assets/img/brand_icons/support.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item15 anim" onclick="profile(this.id)" id="cctv"><img src="assets/img/brand_icons/cctv.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item16 anim" onclick="profile(this.id)" id="database"><img src="assets/img/brand_icons/database.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item17 anim" onclick="profile(this.id)" id="police"><img src="assets/img/brand_icons/police.png" alt="Blank Icon" width="60" height="60"></div>
                   <div class="item item18"onclick="profile(this.id);" id="default"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
                   <div class="item item19"onclick="profile(this.id);" id="default"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
-                  <div class="item item20 anim" onclick="profile(this.id)" id="rfid"><img src="assets/img/icons/rfid.png" alt="Blank Icon" width="60" height="60"></div>
-                  <div class="item item21 anim" onclick="profile(this.id)" id="environmental"><img src="assets/img/icons/ecofriendly.png" alt="Blank Icon" width="60" height="60"></div>
-                  <div class="item item22 anim" onclick="profile(this.id)" id="faceScan"><img src="assets/img/icons/facerec.png" alt="Blank Icon" width="60" height="60"></div>
-                  <div class="item item23 anim" onclick="profile(this.id)" id="analysis"><img src="assets/img/icons/analytics.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item20 anim" onclick="profile(this.id)" id="rfid"><img src="assets/img/brand_icons/rfid.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item21 anim" onclick="profile(this.id)" id="environmental"><img src="assets/img/brand_icons/environment.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item22 anim" onclick="profile(this.id)" id="faceScan"><img src="assets/img/brand_icons/face.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item23 anim" onclick="profile(this.id)" id="analysis"><img src="assets/img/brand_icons/analytics.png" alt="Blank Icon" width="60" height="60"></div>
                   <div class="item item24"onclick="profile(this.id);" id="default"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
                   <div class="item item25"onclick="profile(this.id);" id="default"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
-                  <div class="item item26 anim" onclick="profile(this.id)" id="network"><img src="assets/img/icons/connectivity.png" alt="Blank Icon" width="60" height="60"></div>
-                  <div class="item item27 anim" onclick="profile(this.id)" id="accuracy"><img src="assets/img/icons/database.png" alt="Blank Icon" width="60" height="60"></div>
-                  <div class="item item28 anim" onclick="profile(this.id)" id="log"><img src="assets/img/icons/activityLogging.png" alt="Blank Icon" width="60" height="60"></div>
-                  <div class="item item29 anim" onclick="profile(this.id)" id="message"><img src="assets/img/icons/message.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item26 anim" onclick="profile(this.id)" id="network"><img src="assets/img/brand_icons/connectivity.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item27 anim" onclick="profile(this.id)" id="accuracy"><img src="assets/img/brand_icons/database.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item28 anim" onclick="profile(this.id)" id="log"><img src="assets/img/brand_icons/activityLogging.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item29 anim" onclick="profile(this.id)" id="message"><img src="assets/img/brand_icons/message.png" alt="Blank Icon" width="60" height="60"></div>
                   <div class="item item30"onclick="profile(this.id);" id="default"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
                   <div class="item item31"onclick="profile(this.id);" id="default"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
                   <div class="item item32"onclick="profile(this.id);" id="default"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
@@ -1448,7 +1431,6 @@
 
       currentNode.innerHTML =
       '<div class="fadeIn"><h1 class="text-center" style="font-size:50px;font-weight:500;font-family:Love_Trust;">Technology For Good.</h1>' +
-      '<div class="text-center"><img  class="img-fluid" src="assets/img/arrow.png" alt="" width="80%"></div>' +
       '</div>';
     }
 
