--- a/BiziLand/index.html
+++ b/BiziLand/index.html
@@ -79,7 +79,7 @@
 
               <div class="row" id="welcome">
                 <div class="col-10 d-flex align-items-center justify-content-center mt-5 text-center">
-                    <h1 style="font-size:65px;font-weight:500;font-family:Love_Trust; color: #7c7c7c;">Technology for good.</h1>
+                    <h1 style="font-size:78px;font-weight:600;font-family:poppins;line-height:90px">Technology For Good.</h1>
                 </div>
                 <div class="col-1 d-flex align-items-center justify-content-center p-0 offset-1" style="margin-top: 260px;">
                   <div><img class="img-fluid" src="assets/img/newArrow.png" alt="arrow pointing to icons" width="100%"></div>
@@ -1552,7 +1552,7 @@
 
         currentNode.innerHTML =
           '<div class="fadeIn col-10 d-flex align-items-center justify-content-center mt-5 text-center">' +
-              '<h1 style="font-size:65px;font-weight:500;font-family:Love_Trust; color: #7c7c7c;">Technology for good.</h1>' +
+              '<h1 style="font-size:78px;font-weight:600;font-family:poppins;line-height:90px">Technology For Good.</h1>' +
           '</div>' +
           '<div class="fadeIn col-1 d-flex align-items-center justify-content-center p-0 offset-1" style="margin-top: 260px;">' +
             '<div><img class="img-fluid" src="assets/img/newArrow.png" alt="arrow pointing to icons" width="100%"></div>' +
